--- a/Bootstrap/css/main.css
+++ b/Bootstrap/css/main.css
@@ -9,18 +9,16 @@
     justify-content: center;
 }
 
+
 footer {
     padding: 10px 10px 0 10px;
     background-color: black;
     margin-bottom: 0;
     margin-top: 10px;
     color: white;
-    text-align: center;
+
 }
-.mensajes {
-    text-align: center;
-    margin-bottom: 30px;
-}
+
 .card-stone {
     flex: 1 250px;
     padding: 2px 5px 2px 5px;
@@ -29,5 +27,13 @@ footer {
 
 .btn-dark {
     width: 100%;
-    background: rgb(102, 5, 5) 
+    background: rgb(102, 5, 5)
+}
+
+.footer-address-icon {
+    padding-right: 15px;
+}
+
+.address-text {
+    text-align: center;
 }
