--- a/web4everybody/css/hw1.css
+++ b/web4everybody/css/hw1.css
@@ -71,3 +71,59 @@ aside img {
     float: right;
     background-color: #FFFFFF;
 }
+
+table {
+    background-color: #97c27f57;
+    width: 75%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 17px;
+}
+
+tr:hover {
+    background-color: #073601ce;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+    transition: font-size 1s;
+}
+
+tr:nth-child(even):hover {
+    background-color: #073601ce;
+    font-size: 20px;
+}
+
+tr:nth-child(odd) {
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(28, 68, 1));
+    transition: font-size 1s;
+}
+
+tr:nth-child(odd):hover {
+    background-color: #073601ce;
+    font-size: 20px;
+}
+
+table tr {
+    height: 46px;
+}
+
+table tr td {
+    margin: 10px;
+    text-align: center;
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+}
+
+table th {
+    padding: 20px;
+    background-color: #003605;
+    color: #f5f5f5;
+}
+
+table th:hover {
+    background-color: #f2f2f254;
+}
