Adding content to flexbox dir

--- a/web4everybody/css/hw1.css
+++ b/web4everybody/css/hw1.css
@@ -77,19 +77,20 @@ table {
     width: 75%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 17px;
+    border-radius: 10px;
 }
 
 tr:hover {
-    background-color: #073601ce;
+    background-color: rgba(2, 58, 11, 1);
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: rgba(231, 243, 233, 0.726);
     transition: font-size 1s;
 }
 
 tr:nth-child(even):hover {
-    background-color: #073601ce;
+    background-color: rgba(2, 58, 11, 0.726);
     font-size: 20px;
 }
 
@@ -122,8 +123,14 @@ table th {
     padding: 20px;
     background-color: #003605;
     color: #f5f5f5;
+    border-radius: 10px;
 }
 
 table th:hover {
     background-color: #f2f2f254;
+}
+
+.text-left {
+    text-align: left;
+    padding-left: 10px;
 }
