--- a/Flexbox/landing_layout_1/styles.css
+++ b/Flexbox/landing_layout_1/styles.css
@@ -51,8 +51,6 @@ header nav li:hover {
     text-decoration: underline;
 }
 
-
-/*
 header nav li:first-child {
     margin-left: 0px;
     background-color: aqua;
@@ -61,7 +59,6 @@ header nav li:first-child {
 headernav li:last-child {
     margin-right: 0;
 }
-*/
 
 @media (max-width:1000px) {
     header {
@@ -112,7 +109,141 @@ section p {
 .banner-area {
     position: relative;
     justify-content: center;
-    min-height: 100vh;
+    height: 400px;
     color: aliceblue;
     text-align: center;
+}
+
+.banner-area .banner-img {
+    background-image: url(images/bg.jpg);
+    position: absolute;
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: -1;
+}
+
+.banner-area .banner-img:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: .8;
+}
+
+.banner-area h1 {
+    margin-bottom: 15px;
+    font-size: 65px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.banner-area h3 {
+    margin-bottom: 40px;
+    font-size: 30px;
+    color: #ffffff;
+}
+
+.banner-area a.banner-btn {
+    padding: 15px 35px;
+    background-color: crimson;
+    border-radius: 50px;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+@media (max-width:800px) {
+    .banner-area {
+        min-height: 600px;
+    }
+    .banner-area h1 {
+        font-size: 32px;
+    }
+    .banner-area h3 {
+        font-size: 20px;
+    }
+    .banner-area a.banner-btn {
+        padding: 15px 40px;
+    }
+}
+
+
+/* about */
+
+.about-content {
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.about-content li {
+    width: 100%;
+    padding: 20px;
+    height: 290px;
+    background-clip: content-box;
+    background-position: center;
+}
+
+.about-left {
+    flex-basis: 30%;
+    background-image: url("https://pbs.twimg.com/profile_images/640666088271839233/OTKlt5pC_400x400.jpg");
+    background-repeat: no-repeat;
+    margin-right: 4%;
+}
+
+.about-right {
+    flex-basis: 50%;
+    margin-left: 4%;
+}
+
+.about-area p {
+    max-width: 800px;
+    margin-bottom: 35px;
+    line-height: 1.5;
+    text-align: left;
+    padding-left: 0;
+}
+
+.section-title {
+    text-transform: uppercase;
+    font-size: 50px;
+    justify-self: center;
+    margin-bottom: 20px;
+}
+
+.about-right h2 {
+    margin-bottom: 3%;
+}
+
+@media (max-width:1000px) {
+    .about-left,
+    .about-right {
+        flex-basis: 100%;
+        margin: 0%;
+    }
+    .about-content li {
+        padding: 8px;
+    }
+}
+
+#services {
+    background-color: #999999;
+}
+
+.services-area {
+    display: flex;
+    text-align: center;
+    padding: 40px;
+}
+
+.services-content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
