--- a/test_clone/styles/3-footer.css
+++ b/test_clone/styles/3-footer.css
@@ -1,15 +1,10 @@
 footer {
+    background: #FFFFFF;
     height: 60px;
+    line-height: 60px;
     width: 100%;
-    background-color: #FFFFFF;
-    position: absolute;
-    bottom: 0;
-    border-top: solid 1px #CCCCCC;
-}
-
-p {
-    box-sizing: border-box;
-    margin: 0;
+    bottom: 0px;
+    position: relative;
     text-align: center;
-    padding: 21px 0 21px 0;
+    border-top: 1px solid #CCCCCC;
 }
