--- a/test_clone/styles/6-filters.css
+++ b/test_clone/styles/6-filters.css
@@ -1,108 +1,131 @@
-.filters {
+.container .filters {
     height: 70px;
+    background-color: #FFFFFF;
     width: 100%;
-    border: solid 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    z-index: 2;
+    position: relative;
 }
 
-button {
+.container .filters .locations {
+    width: 25%;
+    border-right: 1px solid #DDDDDD;
+}
+
+.container .filters .amenities {
+    width: 25%;
+}
+
+.container .filters button {
     font-size: 18px;
     background-color: #FF5A5F;
-    width: 20%;
-    height: 48px;
     color: #FFFFFF;
-    border-radius: 4px;
+    height: 48px;
+    width: 20%;
     border: none;
-    box-sizing: border-box;
-    position: absolute;
-    right: 0;
-    margin-right: 30px;
-    margin-top: 12px;
-    margin-bottom: 12px;
-}
-
-button:hover {
-    background-color: rgba(255, 90, 95, .9);
-}
-
-.locations {
-    display: inline-block;
-    box-sizing: border-box;
-    height: 100%;
-    width: 25%;
-}
-
-.amenities {
-    display: inline-block;
-    box-sizing: border-box;
-    height: 100%;
-    width: 25%;
-    border-left: solid 1px #DDDDDD;
-    margin-left: 5%;
-}
-
-.h3-search {
-    font-weight: 600;
-    margin: 0;
-    margin: 5% 0 1% 20%;
-}
-
-.h4-search {
-    font-size: 14px;
-    font-weight: 400;
-    margin: 2% 0 1% 20%;
-}
-
-.popover {
-    position: absolute;
-    background-color: #FAFAFA;
-    list-style-type: none;
-    border: #DDDDDD 1px solid;
     border-radius: 4px;
-    top: 70px;
-    margin: 0;
-    width: 26.5%;
-    top: 70px;
-    visibility: hidden;
+    margin: auto 30px auto auto;
 }
 
-.locations:hover .popover,
-.amenities:hover .popover {
-    visibility: visible;
+.container .filters button:hover {
+    opacity: 0.9;
 }
 
-.popover ul {
+.container .filters h2 {
+    font-size: 16px;
+    margin: 10px 0 5px 0;
+}
+
+.container .filters h3 {
+    font-weight: 600;
+    margin: 12px 0 4px 40px;
+}
+
+.container .filters h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 7px 0 3px 40px;
+}
+
+.container .filters .locations:hover .popover {
+    display: list-item;
+}
+
+.container .filters .amenities:hover .popover {
+    display: list-item;
+}
+
+.container .filters .popover {
+    display: none;
     list-style-type: none;
-    margin-top: 0px;
+    background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    padding: 30px 40px 40px 30px;
+    margin: 15px -1px 0 -1px;
 }
 
-.list-content li {
-    margin-top: 1px;
+.container .filters .popover ul {
+    list-style-type: none;
+    padding-left: 20px;
 }
 
-.list-content {
-    margin-top: 0px;
-}
-
-.locations .popover {
-    padding-top: 20px;
-    padding-bottom: 30px;
-}
-
-.subtitle {
+.container .filters .popover li {
     margin: 5px 0 5px 0;
 }
 
-.subtitle-states {
-    margin-bottom: 5px;
+@media screen and (max-width: 600px) {
+    .container .filters {
+        flex-direction: column;
+        height: auto;
+        width: 90%;
+        margin: 20px;
+    }
+    .container .filters .locations {
+        border-bottom: 1px solid #DDDDDD;
+    }
+    .container .filters .locations,
+    .container .filters .amenities {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #DDDDDD;
+    }
+    .container .filters button {
+        width: 80%;
+        margin: 5px auto;
+    }
 }
 
-.subtitle-cities {
-    padding-left: 10%;
+@media screen and (min-width: 1800px) {
+    .container .filters {
+        min-height: 80px;
+    }
 }
 
-.subtitle-amenities {
-    padding-top: 30px;
-    padding-bottom: 35px;
+@media screen and (max-width: 600px) {
+    .container .filters {
+        flex-direction: column;
+        height: auto;
+        width: 90%;
+        margin: auto;
+    }
+    .container .filters .locations {
+        border-bottom: 1px solid #DDDDDD;
+    }
+    .container .filters .locations,
+    .container .filters .amenities {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #DDDDDD;
+        padding: 15px;
+    }
+    .container .filters button {
+        width: 80%;
+        margin: 20px auto;
+    }
 }
