--- a/test_clone/styles/3-header.css
+++ b/test_clone/styles/3-header.css
@@ -1,14 +1,9 @@
 header {
+    background-color: #FFFFFF;
+    background-image: url("../images/logo.png");
+    background-repeat: no-repeat;
+    background-position: 20px 50%;
     height: 70px;
     width: 100%;
-    background: #FFFFFF;
-    position: absolute;
-    top: 0;
-    border-bottom: solid 1px #CCCCCC;
-}
-
-header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+    border-bottom: 1px solid #CCCCCC;
 }
