--- a/Caribe/css/styles.css
+++ b/Caribe/css/styles.css
@@ -13,6 +13,11 @@ html {
     color: #555;
 }
 
+header {
+    margin: 0;
+    padding: 0;
+}
+
 ul,
 nav {
     list-style: none;
@@ -23,13 +28,6 @@ a {
     color: inherit;
     cursor: pointer;
     opacity: 0.9;
-}
-
-.logo {
-    background-image: url("./images/logo.png");
-    background-color: #2196F3;
-    height: 100px;
-    width: 100px;
 }
 
 a:hover {
@@ -48,9 +46,20 @@ a.btn {
 hr {
     width: 150px;
     height: 2px;
-    background-color: #2196F3;
     border: 0;
     margin-bottom: 80px;
+}
+
+.hr-1 {
+    background-color: rgb(56, 209, 26);
+}
+
+.hr-2 {
+    background-color: rgb(241, 218, 3);
+}
+
+.hr-3 {
+    background-color: rgb(243, 39, 12);
 }
 
 section {
@@ -96,7 +105,7 @@ ul.grid {
 
 
 /*-------------
- 	Header
+Header
 -------------*/
 
 header {
@@ -118,6 +127,9 @@ header h2 {
 
 header nav {
     display: flex;
+    position: absolute;
+    right: 50px;
+    top: 50px;
 }
 
 header nav li {
@@ -147,9 +159,23 @@ header nav li:last-child {
     }
 }
 
+@media (max-width: 500px) {
+    header {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    header h2 {
+        margin-bottom: 15px;
+    }
+    header .logo,
+    header nav {
+        display: block;
+    }
+}
+
 
 /*----------------
- 	Hero Section
+Hero Section
 ----------------*/
 
 .hero {
@@ -179,7 +205,7 @@ header nav li:last-child {
     width: 100%;
     height: 100%;
     background-color: #414a4f;
-    opacity: 0.75;
+    opacity: 0.5;
 }
 
 .hero h1 {
@@ -213,7 +239,7 @@ header nav li:last-child {
 
 
 /*--------------------
- 	Our Work Section
+Our Work Section
 ---------------------*/
 
 .оur-work {
@@ -247,11 +273,12 @@ header nav li:last-child {
 
 
 /*----------------------
- 	Features Section
+Features Section
 ----------------------*/
 
 .features {
-    background-color: #f7f7f7;
+    background: rgb(22, 176, 8);
+    background: linear-gradient(45deg, rgba(22, 176, 8, 0.30015756302521013) 0%, rgba(226, 220, 40, 0.3) 50%, rgba(255, 51, 0, 0.3) 100%);
 }
 
 .features .grid li {
@@ -290,11 +317,14 @@ header nav li:last-child {
     .features .grid li {
         flex-basis: 100%;
     }
+    .contact .grid li {
+        flex-basis: 100%;
+    }
 }
 
 
 /*--------------------
- 	Reviews Section
+Reviews Section
 --------------------*/
 
 .reviews {
@@ -331,16 +361,73 @@ header nav li:last-child {
 
 
 /*---------------------
- 	Contact Section
+Contact Section
 ---------------------*/
 
 .contact {
     background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+}
+
+.contact input[type="text"],
+.contact input[type="email"],
+.contact textarea {
+    width: 100%;
+    margin: 5px 0;
+    padding: 15px 20px;
+    background: none;
+    border-radius: 5px;
+    color: rgb(24, 23, 23);
+    border: 2px solid rgba(204, 204, 204, 0.383);
+    font-family: 'lato';
+    font-weight: 300;
+}
+
+.contact textarea {
+    height: 150px;
+    max-height: 150px;
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 150px;
+}
+
+.contact .boton-form {
+    color: #fff;
+    border: solid 1px #a77e0387;
+    border-radius: 4px;
+    text-transform: capitalize;
+    background-color: #ffc10787;
+    font-weight: 800;
+    text-align: center;
+    padding: 10px 20px;
+    color: rgb(83, 81, 81)
+}
+
+.contact .boton-form:hover {
+    background-color: rgba(255, 193, 7, 1);
+}
+
+.contact .direccion {
+    margin-top: 20px;
+}
+
+.contact h2 {
+    margin-bottom: 25px;
 }
 
 
 /*-------------
- 	Footer
+Footer
 -------------*/
 
 footer {
@@ -350,12 +437,11 @@ footer {
     text-align: center;
     color: #fff;
     background-color: #414a4f;
-    padding: 60px 0;
+    padding: 30px;
 }
 
 footer ul {
     display: flex;
-    margin-bottom: 25px;
     font-size: 32px;
 }
 
