--- a/Caribe/css/styles_test.css
+++ b/Caribe/css/styles_test.css
@@ -35,7 +35,7 @@ html {
     text-align: center;
     padding: 12px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 22px;
     line-height: 25px;
     border-radius: 4px;
 }
@@ -53,8 +53,7 @@ html {
 /* Change the background color on mouse-over */
 
 .header .header-right a:hover {
-    background-color: rgb(236, 182, 5);
-    border: solid 1px #ffffff;
+    background-color: #ccc9c991;
 }
 
 
@@ -143,6 +142,7 @@ a.btn {
     text-align: center;
     font-size: 20px;
     border-radius: 5px;
+    box-shadow: 10px 15px 20px -3px #050505;
 }
 
 a.btn:hover {
@@ -155,6 +155,24 @@ hr {
     height: 2px;
     border: 0;
     margin-bottom: 80px;
+}
+
+.header-btn-1:hover {
+    text-decoration: underline;
+    text-decoration-color: rgb(56, 209, 26);
+    text-decoration-style: double;
+}
+
+.header-btn-2:hover {
+    text-decoration: underline;
+    text-decoration-color: rgb(241, 218, 3);
+    text-decoration-style: double;
+}
+
+.header-btn-3:hover {
+    text-decoration: underline;
+    text-decoration-color: rgb(243, 39, 12);
+    text-decoration-style: double;
 }
 
 .hr-1 {
@@ -544,7 +562,11 @@ footer {
     text-align: center;
     color: #fff;
     background-color: #414a4f;
-    padding: 30px;
+    padding: 20px 10px 10px 10px;
+}
+
+footer p {
+    margin-top: 10px;
 }
 
 footer ul {
@@ -598,4 +620,163 @@ footer .icon {
     padding: 0 30px;
     flex-basis: 33%;
     text-align: center;
+}
+
+
+/*
+carrusel
+*/
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, sans-serif;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+
+/* Slideshow container */
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+    text-align: center;
+}
+
+
+/* Caption text */
+
+.carrousel-text {
+    color: #000000;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
+    text-align: center;
+    background-color: #ecdc7f8e;
+}
+
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #000000;
+    font-size: 18px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+
+/* The dots/bullets/indicators */
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.slideshow-container .active {
+    background-color: #717171;
+}
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+
+/* On smaller screens, decrease text size */
+
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px
+    }
+}
+
+.our-work .row {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap;
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+
+/* Create four equal columns that sits next to each other */
+
+.our-work .row .column {
+    -ms-flex: 25%;
+    /* IE10 */
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.our-work .row .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+
+@media screen and (max-width: 800px) {
+    .column {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
+@media screen and (max-width: 600px) {
+    .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
 }
