--- a/Caribe/css/styles_test.css
+++ b/Caribe/css/styles_test.css
@@ -52,10 +52,6 @@ html {
 
 /* Change the background color on mouse-over */
 
-.header .header-right a:hover {
-    background-color: #ccc9c991;
-}
-
 
 /* Float the link section to the right */
 
@@ -137,7 +133,7 @@ a.btn {
     border-radius: 4px;
     border: solid 1px rgb(236, 182, 5);
     text-transform: uppercase;
-    background-color: #d2d0ccab;
+    background-color: rgb(236, 182, 5);
     font-weight: 800;
     text-align: center;
     font-size: 20px;
@@ -146,7 +142,7 @@ a.btn {
 }
 
 a.btn:hover {
-    background-color: rgb(236, 182, 5);
+    background-color: #b39203;
     color: #fff;
 }
 
