--- a/Caribe/caribe_v2/css/styles.css
+++ b/Caribe/caribe_v2/css/styles.css
@@ -1,5 +1,5 @@
 /*-------------
- 	General
+General
 -------------*/
 
 * {
@@ -36,18 +36,18 @@ a:hover {
 }
 
 a.btn {
-    color: rgb(65, 55, 1);
-    border-radius: 4px;
+    color: rgb(211, 209, 199);
+    border-radius: 15px;
     text-transform: uppercase;
-    background-color: rgb(255, 215, 0);
+    background-color: rgb(32, 99, 131);
     font-weight: 800;
     text-align: center;
-    border: solid 2px #bda101
+    border: solid 1px #dad8cf
 }
 
 a.btn:hover {
     background-color: #dac8008f;
-    color: white;
+    color: rgb(32, 99, 131);
 }
 
 hr {
@@ -114,7 +114,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #fff;
+    color: rgb(32, 99, 131);
     padding: 15px 100px 15px;
 }
 
@@ -170,14 +170,14 @@ header nav li:last-child {
 
 
 /*----------------
- 	Hero Section
+Hero Section
 ----------------*/
 
 .hero {
     position: relative;
     justify-content: center;
     min-height: 100vh;
-    color: #fff;
+    color: rgb(43, 99, 126);
     text-align: center;
 }
 
@@ -199,8 +199,8 @@ header nav li:last-child {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #414a4f;
-    opacity: 0.75;
+    background-color: #9c9fa0;
+    opacity: 0.4;
 }
 
 .hero h1 {
@@ -248,6 +248,13 @@ Our Work Section
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 700;
     text-transform: none;
+    color: rgb(32, 99, 131);
+}
+
+.our-work p {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 20px;
+    color: #021e35;
 }
 
 .our-work .grid li {
