--- a/Caribe/caribe_v2/css/styles.css
+++ b/Caribe/caribe_v2/css/styles.css
@@ -28,6 +28,7 @@ a {
     color: inherit;
     cursor: pointer;
     opacity: 0.9;
+    margin: 10px;
 }
 
 a:hover {
@@ -216,7 +217,11 @@ Hero Section
 }
 
 .hero a.btn {
-    padding: 20px 46px;
+    padding: 15px 46px;
+}
+
+.hero a i {
+    margin-right: 8px;
 }
 
 @media (max-width: 800px) {
@@ -476,7 +481,7 @@ footer p a {
 
 @media (max-width: 700px) {
     footer {
-        padding: 80px 15px;
+        padding: 40px 15px;
     }
 }
 
