--- a/Caribe/caribe_v3/css/styles.css
+++ b/Caribe/caribe_v3/css/styles.css
@@ -1,3 +1,10 @@
 .blue {
     color: #004c72;
 }
+
+.backdrop {
+    backdrop-filter: blur(5px);
+  }
+  .text-shadow {
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  }
