--- a/frontendmaster/flex/boxes.css
+++ b/frontendmaster/flex/boxes.css
@@ -8,6 +8,9 @@ ul {
 	margin: 0;
 	border: 1px dotted red;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 li {
 	border: 1px solid #999;
