--- a/frontendmaster/grid/styles.css
+++ b/frontendmaster/grid/styles.css
@@ -2,9 +2,11 @@
 .wrapper {
     width: 600px;
     height: 600px;
-    background: url(painting.png) no-repeat;
+    background-color: #222;
     display: grid;
     grid-gap: 10px;
+    grid-template-columns: 124px 376px 42px;
+    grid-template-rows: 170px 210px 61px 61px;
    
   }
   div {
@@ -15,29 +17,36 @@
   .a {
   grid-row: 1/2;
   grid-column: 1/2;
+  background-color: #999;
   }
   .b {
     grid-row: 2/3;
   grid-column: 1/2;
+  background-color: #999;
   }
   .c {
     grid-row: 1/3;
   grid-column: 2/4;
+  background-color: red;
   }
   .d {
     grid-row: 3/5;
   grid-column: 1/2;
+  background-color: blue;
   }
   .e {
     grid-row: 3/5;
   grid-column: 2/3;
+  background-color: #999;
   }
   .f {
     grid-row: 3/4;
   grid-column: 3/4;
+  background-color: #999;
   }
   .g {
     grid-row: 4/5;
     grid-column: 3/4;
+    background-color: yellow;
   }
   
